--- a/quantum-ai-backend/.env
+++ b/quantum-ai-backend/.env
@@ -40,6 +40,18 @@ PRO_RATE_LIMIT=500
 PREMIUM_RATE_LIMIT=2000
 ENTERPRISE_RATE_LIMIT=10000
 
+# Model-specific Rate Limits
+OPENAI_RATE_LIMIT=100
+GEMINI_RATE_LIMIT=100
+DEEPSEEK_RATE_LIMIT=100
+HUGGINGFACE_RATE_LIMIT=100
+
+# Model Selection Configuration
+DEFAULT_MODEL=openai
+CODE_MODEL=openai
+FACT_CHECK_MODEL=gemini
+CONVERSATIONAL_MODEL=deepseek
+
 # Stripe Configuration
 STRIPE_SECRET_KEY=your-stripe-secret-key
 STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
